--- a/UI/SearchMovie.UI/View/MainWindow.xaml
+++ b/UI/SearchMovie.UI/View/MainWindow.xaml
@@ -3,10 +3,15 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SearchMovie.UI.View"
+        xmlns:view="clr-namespace:SearchMovie.UI.View"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+        </Grid.RowDefinitions>
+        <view:SearchInputView DataContext="{Binding SearchInputViewModel}" Grid.Row="0"/>
+        <view:SearchResultView DataContext="{Binding SearchResultViewModel}" Grid.Row="1"/>
     </Grid>
 </Window>
